# tacticalMonsters

tacticalMonsters/: CMakeLists.txt  CMakeLists.txt.user.67e7c2e  CMakeLists.txt.user.9c3dc7b  classes.cpp  classes.h  gallerywindow.cpp  gallerywindow.h  gallerywindow.ui  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  namewindow.cpp  namewindow.h  namewindow.ui  playerClass.cpp  playerClass.h  playinggamewindow.cpp  playinggamewindow.h  playinggamewindow.ui  pregamewindow.cpp  pregamewindow.h  pregamewindow.ui  src.qrc
